Updated some icons

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -39,7 +39,7 @@
                                         <div class="card-block border-bottom">
                                             <div class="row d-flex align-items-center">
                                                 <div class="col-auto">
-                                                    <i class="feather icon-zap f-30 text-c-green"></i>
+                                                    <i class="fa fa-laptop f-30 text-c-green"></i>
                                                 </div>
                                                 <div class="col">
                                                     <h3 id="vms" class="f-w-300">{{ vms }}</h3>
@@ -50,7 +50,7 @@
                                         <div class="card-block border-bottom">
                                             <div class="row d-flex align-items-center">
                                                 <div class="col-auto">
-                                                    <i class="feather icon-map-pin f-30 text-c-blue"></i>
+                                                    <i class="fa-solid fa-microchip f-30 text-c-blue"></i>
                                                 </div>
                                                 <div class="col">
                                                     <h3 id="vcpus" class="f-w-300">{{ vcpus }}</h3>
@@ -61,7 +61,7 @@
                                         <div class="card-block border-bottom">
                                             <div class="row d-flex align-items-center">
                                                 <div class="col-auto">
-                                                    <i class="feather icon-map-pin f-30 text-c-blue"></i>
+                                                    <i class="fa-solid fa-memory f-30 text-c-blue"></i>
                                                 </div>
                                                 <div class="col">
                                                     <h3 id="memory" class="f-w-300">{{ memory }}</h3>
@@ -72,7 +72,7 @@
                                         <div class="card-block">
                                             <div class="row d-flex align-items-center">
                                                 <div class="col-auto">
-                                                    <i class="feather icon-map-pin f-30 text-c-blue"></i>
+                                                    <i class="fas fa-hdd f-30 text-c-blue"></i>
                                                 </div>
                                                 <div class="col">
                                                     <h3 id="storage" class="f-w-300">{{ storage }}</h3>
