--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -37,12 +37,12 @@
                 <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'images' in segment %} active {% endif %}">
                     <a href="/images" class="nav-link "><span class="pcoded-micon"><i
-                            class="feather icon-server"></i></span><span class="pcoded-mtext">Images</span></a>
+                            class="fa fa-list-alt"></i></span><span class="pcoded-mtext">Images</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'storage' in segment %} active {% endif %}">
                     <a href="/storage" class="nav-link "><span class="pcoded-micon"><i
-                            class="feather icon-server"></i></span><span class="pcoded-mtext">Storage</span></a>
+                            class="fa-solid fa-database"></i></span><span class="pcoded-mtext">Storage</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'migration_plans' in segment %} active {% endif %}">
