--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -17,34 +17,37 @@
                             class="pcoded-mtext">Dashboard</span></a>
                 </li>
                 <li class="nav-item pcoded-menu-caption">
-                    <label>Mapping</label>
+                    <label>Cluster Mapping</label>
                 </li>
-                <li data-username="Table bootstrap datatable footable" 
-                    class="nav-item {% if 'vm2tenants' in segment %} active {% endif %}">
-                    <a href="/vm2tenants" class="nav-link "><span class="pcoded-micon"><i
-                            class="feather icon-server"></i></span><span class="pcoded-mtext">VM to Tenants</span></a>
-                </li>
-                <li data-username="Table bootstrap datatable footable" 
+                <li data-username="Table bootstrap datatable footable"
                     class="nav-item {% if 'flavors' in segment %} active {% endif %}">
                     <a href="/flavors" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Flavors</span></a>
                 </li>
-                <li data-username="Table bootstrap datatable footable" 
-                    class="nav-item {% if 'networks' in segment %} active {% endif %}">
-                    <a href="/networks" class="nav-link "><span class="pcoded-micon"><i
-                            class="feather icon-server"></i></span><span class="pcoded-mtext">Networks</span></a>
-                </li>
-                <li data-username="Table bootstrap datatable footable" 
+                <li data-username="Table bootstrap datatable footable"
                     class="nav-item {% if 'images' in segment %} active {% endif %}">
                     <a href="/images" class="nav-link "><span class="pcoded-micon"><i
                             class="fa fa-list-alt"></i></span><span class="pcoded-mtext">Images</span></a>
                 </li>
-                <li data-username="Table bootstrap datatable footable" 
+                <li data-username="Table bootstrap datatable footable"
                     class="nav-item {% if 'storage' in segment %} active {% endif %}">
                     <a href="/storage" class="nav-link "><span class="pcoded-micon"><i
                             class="fa-solid fa-database"></i></span><span class="pcoded-mtext">Storage</span></a>
                 </li>
-                <li data-username="Table bootstrap datatable footable" 
+                <li class="nav-item pcoded-menu-caption">
+                    <label>Tenant Mapping</label>
+                </li>
+                <li data-username="Table bootstrap datatable footable"
+                    class="nav-item {% if 'vm2tenants' in segment %} active {% endif %}">
+                    <a href="/vm2tenants" class="nav-link "><span class="pcoded-micon"><i
+                            class="feather icon-server"></i></span><span class="pcoded-mtext">VM to Tenants</span></a>
+                </li>
+                <li data-username="Table bootstrap datatable footable"
+                    class="nav-item {% if 'networks' in segment %} active {% endif %}">
+                    <a href="/networks" class="nav-link "><span class="pcoded-micon"><i
+                            class="feather icon-server"></i></span><span class="pcoded-mtext">Networks</span></a>
+                </li>
+                <li data-username="Table bootstrap datatable footable"
                     class="nav-item {% if 'migration_plans' in segment %} active {% endif %}">
                     <a href="/migration_plans" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Migration Plans</span></a>
