--- a/apps/templates/home/tbl_vm2tenants.html
+++ b/apps/templates/home/tbl_vm2tenants.html
@@ -116,7 +116,7 @@ let vm2tenant_table = new DataTable('#vm2tenants', {
                       r = '<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>'
                       break;
               }
-              r = '<span data-toggle="tooltip" title="' + data + '">' + r + '</span>';
+              r = '<span data-toggle="tooltip" title="' + full['support_message'] + '">' + r + '</span>';
               return r
            },
         },
