--- a/apps/templates/home/tbl_vm2tenants.html
+++ b/apps/templates/home/tbl_vm2tenants.html
@@ -79,7 +79,7 @@ let vm2tenant_editor = new DataTable.Editor( {
     idSrc:  'seqno',
     fields: [
         { label: "", name: 'seqno'},
-        { label: "", name: 'supported'},
+        { label: "", name: 'supported', multiEditable: false },
         { label: 'VM Path',  name: 'VM Path', multiEditable: false },
         { label: 'Name', name: 'Name', multiEditable: false },
         { label: 'Guest',  name: 'Guest', multiEditable: false  },
