Added few enhancements for migration_plans

--- a/apps/static/assets/css/dark.css
+++ b/apps/static/assets/css/dark.css
@@ -58,6 +58,7 @@ body.dark {
       background-color: #082032; }
   body.dark .custom-select,
   body.dark select,
+  body.dark .list-group-item,
   body.dark .form-control,
   body.dark .input-group-prepend,
   body.dark .input-group-append {
