--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -48,11 +48,11 @@
 <body>
 
     <!-- [ Pre-loader ] start -->
-    <div class="loader-bg">
+    <!--div class="loader-bg">
         <div class="loader-track">
             <div class="loader-fill"></div>
         </div>
-    </div>
+    </div-->
     <!-- [ Pre-loader ] End -->
 
     {% include 'includes/sidebar.html' %}
